Fixed Word Spacing

--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,6 @@ main {
 #f-footer a {
     color: #fff;
     text-decoration: none;
-    word-spacing: 1em;
 }
 
 /* Landing Page */
